--- a/index.html
+++ b/index.html
@@ -13,13 +13,26 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col col-sm-12 col-md-6">
-          <img src="img-1.jpg">
+        <div class="col"><h3>XX月XX日は参議院選挙</h3></div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col-3 col-sm-3 col-lg-3">
+          <img src="icon-1.jpg" width="100%">
         </div>
-        <div class="col col-md-6">
+        <div class="col">
           <h2>工科生に安心の未来を</h2>
-          <h3>〇〇党</h3>
-          <h2>こうか とん</h2>
+          <h3>〇〇党 こうか とん</h3>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col-9 col-sm-9 col-lg-9">
+          <h2>工科生に安心の未来を</h2>
+          <h3>〇〇党 こうか とん</h3>
+        </div>
+        <div class="col">
+          <img src="icon-1.jpg" width="100%">
         </div>
       </div>
     </div>
