--- a/index.html
+++ b/index.html
@@ -16,6 +16,37 @@
         <div class="col"><h3>XX月XX日は参議院選挙</h3></div>
       </div>
       <hr>
+      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="slide-1.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>First slide label</h5>
+              <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="slide-1.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="slide-1.jpg" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+      <hr>
       <div class="row">
         <div class="col-3 col-sm-3 col-lg-3">
           <img src="icon-1.jpg" width="100%">
@@ -28,14 +59,28 @@
       <hr>
       <div class="row">
         <div class="col-9 col-sm-9 col-lg-9">
-          <h2>工科生に安心の未来を</h2>
-          <h3>〇〇党 こうか とん</h3>
+          <h2>この国を守りたい</h2>
+          <h3>XX党</h3>
         </div>
         <div class="col">
           <img src="icon-1.jpg" width="100%">
         </div>
       </div>
     </div>
+    <ul class="nav justify-content-center navbar-light bg-light fixed-bottom">
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#" aria-disabled="true">TOP</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#" tabindex="-1">Disabled</a>
+      </li>
+    </ul>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
