--- a/list/01.html
+++ b/list/01.html
@@ -8,15 +8,31 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="../style.css">
+  <script src="https://kit.fontawesome.com/c55e3ebd21.js" crossorigin="anonymous"></script>
   <title>kati team18</title>
+  <style>
+    .h {
+      background: linear-gradient(transparent 70%, #85e2ff 70%);
+    }
+  </style>
 </head>
 
 <body>
-  <div class="container">
+<div class="row align-items-start">
+  <div class="d-none d-lg-block col-lg-3 sticky-top border-r">
+    <nav class="l-bar">
+      <div class="w-100"><a href="../index.html"><h3>TOP</h3></a></div><br>
+      <div class="w-100"><a href="../list.html"><h3>候補者一覧</h3></a></div><br>
+      <div class="w-100"><a href="../seitou.html"><h3>政党で見る</h3></a></div><br>
+      <div class="w-100"><a href="#"><h3>よくある質問</h3></a></div><br>
+      <div class="w-100"><a href="../other.html"><h3>その他</h3></a></div>
+    </nav>
+  </div>
+  <div class="container col-12 col-md-9 col-lg-8 ml-lg-1 bd-sidebar">
     <div class="row">
-      <div class="col-5 col-sm-6 col-lg-3">
+      <div class="col-5 col-sm-5 col-lg-4">
         <img src="../img/list/01/img.jpg" width="100%">
       </div>
       <div class="col">
@@ -35,44 +51,86 @@
       現在は不透明な時代といわれていますが、社会、経済、環境やテクノロジーがどのように変わっても、これに柔軟に適応できるようにきめ細やかなトータルサポートを行っています。
     </p>
     <hr>
-    <h3 class="h3">プロフィール</h3>
+    <h3 class="h">プロフィール</h3>
     <p>
       TUT党のマスコット兼候補者。<br>
       19XX年X月XX日、八王子市生まれ。東京工科大学卒業。<br>
-      <br>
       20XX年、TUT党に入党<br>
       20XX年X月、TUT党マスコットに就任
     </p>
     <hr>
+    <h3 class="h">学生の生活しやすい環境づくりを</h3>
+    <p>
+      これからの未来の主役である若者、なかでも特に学生のための政治をモットーに活動します！
+      寿限無　寿限無　五劫のすりきれ
+      海砂利水魚の水行末　雲来末　風来末
+      食う寝るところに住むところ
+      やぶら小路のぶら小路
+      パイポパイポ　パイポのシューリンガン
+      シューリンガンのクーリンダイ
+      クーリンダイのポンポコナーのポンポコピーの
+      長久命の長助。<br>
+    </p>
+    <hr>
+    <h3 class="h">社会保障制度の充実を目指します</h3>
+    <p>
+      吾輩は猫である。名前はまだ無い。
+      どこで生れたかとんと見当がつかぬ。
+      何でも薄暗いじめじめした所でニヤーニヤー泣いてゐた事だけは記憶してゐる。
+      吾輩はここで始めて人間といふものを見た。 しかもあとで聞くとそれは書生といふ人間中で一番獰悪な種族であつたさうだ。
+      この書生といふのは時々我々を捕へて煮て食ふといふ話である。
+      しかしその当時は何といふ考もなかつたから別段恐しいとも思はなかつた。
+      ただ彼の掌に載せられてスーと持ち上げられた時何だかフワフワした感じがあつたばかりである。
+      掌の上で少し落ちついて書生の顔を見たのがいはゆる人間といふものの見始であらう。
+      この時妙なものだと思つた感じが今でも残つてゐる。<br>
+    </p>
+    <hr>
+    <h3 class="h">政見放送</h3>
+    <div class="youtube">
+      <iframe src="https://www.youtube-nocookie.com/embed/YauKeuguMQ8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    <hr>
+    <h3 class="h">連絡先</h3>
+    <p>
+      Home Page : <a href="https://www.teu.ac.jp/" target="_blank">東京工科大学</a> <br>
+      Mail : <a href="#">kokaton@kokaton.koka</a><br>
+      Twitter : <a href="https://twitter.com/tut_tweet?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @tut_tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script><br>
+      Instagram : <span class="ig-btn"><a href="https://www.instagram.com/tut_koukaton.official?ref=badge" target="_blank" class="fab fa-instagram"> tut_koukaton.official</a></span>
+    </p>
+
   </div>
-  <ul class="nav justify-content-center navbar-light bg-light fixed-bottom">
-    <li class="nav-item">
-      <a class="nav-link" href="../index.html"">TOP</a>
-      </li>
-      <li class=" nav-item">
-        <a class="nav-link" href="../list.html">候補者一覧</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="../seitou.html">政党で見る</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">よくある質問</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">その他</a>
-    </li>
-  </ul>
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
+
+</div>
+<div class="d-lg-none footer"></div>
+
+<ul class="d-lg-none nav justify-content-center navbar-light bg-light fixed-bottom">
+  <li class="nav-item">
+    <a class="nav-link" href="../index.html">TOP</a>
+  </li>
+  <li class=" nav-item">
+    <a class="nav-link" href="../list.html">候補者一覧</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="../seitou.html">政党で見る</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">よくある質問</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="../other.html">その他</a>
+  </li>
+</ul>
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
