--- a/index.html
+++ b/index.html
@@ -8,13 +8,24 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/c55e3ebd21.js" crossorigin="anonymous"></script>
   <title>kati team18</title>
 </head>
 
 <body>
-  <div class="container">
+<div class="row align-items-start">
+  <div class="d-none d-lg-block col-lg-3 sticky-top border-r">
+    <nav class="l-bar">
+      <div class="w-100"><a class="disabled" aria-disabled="true"><h3>TOP</h3></a></div><br>
+      <div class="w-100"><a href="./list.html"><h3>候補者一覧</h3></a></div><br>
+      <div class="w-100"><a href="./seitou.html"><h3>政党で見る</h3></a></div><br>
+      <div class="w-100"><a href="#"><h3>よくある質問</h3></a></div><br>
+      <div class="w-100"><a href="./other.html"><h3>その他</h3></a></div>
+    </nav>
+  </div>
+  <div class="container col-12 col-md-9 col-lg-8 ml-lg-1 bd-sidebar">
     <div class="row">
       <div class="col">
         <h3>XX月XX日は参議院選挙</h3>
@@ -61,46 +72,50 @@
         <h3>〇〇党 こうか とん</h3>
       </a>
     </div>
-  </div>
-  <hr>
-  <div class="row">
-    <div class="col-9 col-sm-9 col-lg-9">
-      <h2>この国を守りたい</h2>
-      <h3>XX党</h3>
+    <hr>
+    <div class="row">
+      <div class="col-9 col-sm-9 col-lg-9">
+        <a href="./seitou/01.html">
+          <h2>日本の明日を切り拓く</h2>
+          <h3>自由民主党</h3>
+        </a>
+      </div>
+      <div class="col">
+        <img src="./img/seitou/jimin-icon.png" width="100%">
+      </div>
     </div>
-    <div class="col">
-      <img src="./img/list/01/icon.jpg" width="100%">
-    </div>
   </div>
-  </div>
-  <ul class="nav justify-content-center navbar-light bg-light fixed-bottom">
-    <li class="nav-item">
-      <a class="nav-link disabled" href="#" aria-disabled="true">TOP</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="./list.html">候補者一覧</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="./seitou.html">政党で見る</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">よくある質問</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">その他</a>
-    </li>
-  </ul>
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
+</div>
+
+<div class="d-lg-none footer"></div>
+<ul class="d-lg-none nav justify-content-center navbar-light bg-light fixed-bottom">
+  <li class="nav-item">
+    <a class="nav-link disabled" href="#" aria-disabled="true">TOP</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="./list.html">候補者一覧</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="./seitou.html">政党で見る</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">よくある質問</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="./other.html">その他</a>
+  </li>
+</ul>
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
