--- a/seitou.html
+++ b/seitou.html
@@ -14,28 +14,41 @@
 </head>
 
 <body>
-  <div class="container">
+<div class="row align-items-start">
+  <div class="d-none d-lg-block col-lg-3 sticky-top border-r">
+    <nav class="l-bar">
+      <div class="w-100"><a href="./index.html"><h3>TOP</h3></a></div><br>
+      <div class="w-100"><a href="./list.html"><h3>候補者一覧</h3></a></div><br>
+      <div class="w-100"><a class="disabled" aria-disabled="true"><h3>政党で見る</h3></a></div><br>
+      <div class="w-100"><a href="#"><h3>よくある質問</h3></a></div><br>
+      <div class="w-100"><a href="./other.html"><h3>その他</h3></a></div>
+    </nav>
+  </div>
+  <div class="container col-12 col-md-9 col-lg-8 ml-lg-1 bd-sidebar">
     <div class="row">
       <div class="col">
         <h2>政党で見る</h2>
       </div>
     </div>
     <hr>
-    <a href="#" class="row">
+    <a href="./seitou/01.html" class="row">
       <div class="col-3 col-sm-3 col-lg-3">
         <img src="./img/seitou/jimin-icon.png" width="100%">
       </div>
       <div class="col">
-        <h2>政治は国民のもの</h2>
+        <h2>日本の明日を切り拓く</h2>
         <h3>自民党</h3>
-        aaaaaa
+        あなたの一票を自民党に。
       </div>
     </a>
     <hr>
   </div>
+</div>
+<div class="d-lg-none footer"></div>
+<ul class="d-lg-none nav justify-content-center navbar-light bg-light fixed-bottom">
   <ul class="nav justify-content-center navbar-light bg-light fixed-bottom">
     <li class="nav-item">
-      <a class="nav-link" href="./index.html"">TOP</a>
+      <a class="nav-link" href="./index.html">TOP</a>
       </li>
       <li class=" nav-item">
         <a class="nav-link" href="./list.html">候補者一覧</a>
@@ -47,7 +60,7 @@
       <a class="nav-link" href="#">よくある質問</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">その他</a>
+      <a class="nav-link" href="./other.html">その他</a>
     </li>
   </ul>
   <!-- Optional JavaScript -->
