サービス名追加した

--- a/other.html
+++ b/other.html
@@ -17,6 +17,7 @@
 <div class="row align-items-start">
     <div class="d-none d-lg-block col-lg-3 sticky-top border-r">
         <nav class="l-bar">
+            <div class="w-100"><h2>選挙Go</h2></div><br>
             <div class="w-100"><a href="./index.html"><h3>TOP</h3></a></div><br>
             <div class="w-100"><a href="./list.html"><h3>候補者一覧</h3></a></div><br>
             <div class="w-100"><a href="./seitou.html"><h3>政党で見る</h3></a></div><br>
@@ -25,6 +26,8 @@
         </nav>
     </div>
     <div class="container col-12 col-md-9 col-lg-8 ml-lg-1 bd-sidebar">
+        <h2 class="d-lg-none">選挙Go</h2>
+        <br class="d-lg-none">
         <div class="row">
             <div class="col">
                 <h2>その他</h2>
