--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <div class="row align-items-start">
   <div class="d-none d-lg-block col-lg-3 sticky-top border-r">
     <nav class="l-bar">
+      <div class="w-100"><h2>選挙Go</h2></div><br>
       <div class="w-100"><a class="disabled" aria-disabled="true"><h3>TOP</h3></a></div><br>
       <div class="w-100"><a href="./list.html"><h3>候補者一覧</h3></a></div><br>
       <div class="w-100"><a href="./seitou.html"><h3>政党で見る</h3></a></div><br>
@@ -26,6 +27,8 @@
     </nav>
   </div>
   <div class="container col-12 col-md-9 col-lg-8 ml-lg-1 bd-sidebar">
+    <h2 class="d-lg-none">選挙Go</h2>
+    <br class="d-lg-none">
     <div class="row">
       <div class="col">
         <h3>2020年01月XX日は参議院選挙</h3>
