--- a/seitou/01.html
+++ b/seitou/01.html
@@ -23,6 +23,7 @@
 <div class="row align-items-start">
   <div class="d-none d-lg-block col-lg-3 sticky-top border-r">
     <nav class="l-bar">
+      <div class="w-100"><h2>選挙Go</h2></div><br>
       <div class="w-100"><a href="../index.html"><h3>TOP</h3></a></div><br>
       <div class="w-100"><a href="../list.html"><h3>候補者一覧</h3></a></div><br>
       <div class="w-100"><a href="../seitou.html"><h3>政党で見る</h3></a></div><br>
@@ -31,6 +32,8 @@
     </nav>
   </div>
   <div class="container col-12 col-md-9 col-lg-8 ml-lg-1 bd-sidebar">
+    <h2 class="d-lg-none">選挙Go</h2>
+    <br class="d-lg-none">
     <img src="../img/seitou/jimin-top.jpg" width="95%">
     <hr>
     <h3 class="h">力強い外交・防衛で、国益を守る</h3>
