軽微な変更

--- a/list.html
+++ b/list.html
@@ -52,7 +52,7 @@
       </div>
       <div class="col">
         <h2>工科生に安心の未来を</h2>
-        <h3>〇〇党 こうか とん</h3>
+        <h3>TUT党 こうか とん</h3>
         若者のための政治を目指します
       </div>
     </a>
@@ -63,7 +63,7 @@
       </div>
       <div class="col">
         <h2>工科生に安心の未来を</h2>
-        <h3>〇〇党 こうか とん</h3>
+        <h3>TUT党 こうか とん</h3>
         若者のための政治を目指します
       </div>
     </a>
