--- a/list/01.html
+++ b/list/01.html
@@ -93,7 +93,7 @@
       <iframe src="https://www.youtube-nocookie.com/embed/YauKeuguMQ8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <hr>
-    <h3 class="h">連絡先</h3>
+    <h3 class="h">もっと見る</h3>
     <p>
       Home Page : <a href="https://www.teu.ac.jp/" target="_blank">東京工科大学</a> <br>
       Mail : <a href="#">kokaton@kokaton.koka</a><br>
