--- a/other.html
+++ b/other.html
@@ -36,7 +36,7 @@
         <hr>
         <h3 class="h">このサイトについて</h3>
         <p>
-            このサイトは
+            このサイトはデモサイトです。実在の人物、団体等とは一切関係がありません。
         </p>
         <hr>
         <h3 class="h">参考</h3>
