--- a/seitou.html
+++ b/seitou.html
@@ -41,7 +41,8 @@
       <div class="col">
         <h2>日本の明日を切り拓く</h2>
         <h3>自民党</h3>
-        あなたの一票を自民党に。
+        あなたの一票を自民党に。<br>
+        力強い外交・防衛と強い経済、そして憲法改正を目指します。
       </div>
     </a>
     <hr>
