--- a/seitou/01.html
+++ b/seitou/01.html
@@ -78,7 +78,7 @@
       <iframe src="https://www.youtube.com/embed/i8xd_EM3TV4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <hr>
-    <h3 class="h">連絡先</h3>
+    <h3 class="h">もっと見る</h3>
     <p>
       Home Page : <a href="https://www.jimin.jp/" target="_blank">自由民主党</a> <br>
       Mail : <a href="#">jimin@jimin.jp</a><br>
