--- a/index.html
+++ b/index.html
@@ -36,38 +36,40 @@
       </div>
     </div>
     <hr>
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div id="slide" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
-        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+        <li data-target="#slide" data-slide-to="0" class="active"></li>
+        <li data-target="#slide" data-slide-to="1"></li>
       </ol>
       <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="./img/list/01/slide.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>First slide label</h5>
-            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+        <a class="carousel-item active" href="./list/01.html">
+          <img src="./img/list/01/icon.jpg" class="d-block half-img" alt="...">
+          <div class="carousel-caption">
+            <h2>工科生に安心の未来を</h2>
+            <h3>TUT党 こうか とん</h3>
           </div>
-        </div>
+        </a>
         <div class="carousel-item">
-          <img src="./img/list/01/slide.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="./img/list/01/slide.jpg" class="d-block w-100" alt="...">
+          <a href="./list/01.html">
+            <img src="./img/list/01/icon.jpg" class="d-block half-img" alt="...">
+            <div class="carousel-caption">
+              <h2>工科生に安心の未来を</h2>
+              <h3>TUT党 こうか とん</h3>
+            </div>
+          </a>
         </div>
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <a class="carousel-control-prev" href="#slide" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
       </a>
-      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <a class="carousel-control-next" href="#slide" role="button" data-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
     </div>
     <hr>
-    <div class="row">
+    <!--div class="row">
       <div class="col-3 col-sm-3 col-lg-3">
         <img src="./img/list/01/icon.jpg" width="100%">
       </div>
@@ -76,7 +78,7 @@
         <h3>〇〇党 こうか とん</h3>
       </a>
     </div>
-    <hr>
+    <hr-->
     <div class="row">
       <div class="col-9 col-sm-9 col-lg-9">
         <a href="./seitou/01.html">
