--- a/seitou.html
+++ b/seitou.html
@@ -10,74 +10,86 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
-  <title>kati team18</title>
+  <title>選挙Go</title>
 </head>
 
 <body>
-<div class="row align-items-start">
-  <div class="d-none d-lg-block col-lg-3 sticky-top border-r">
-    <nav class="l-bar">
-      <div class="w-100"><h2>選挙Go</h2></div><br>
-      <div class="w-100"><a href="./index.html"><h3>TOP</h3></a></div><br>
-      <div class="w-100"><a href="./list.html"><h3>候補者一覧</h3></a></div><br>
-      <div class="w-100"><a class="disabled" aria-disabled="true"><h3>政党で見る</h3></a></div><br>
-      <div class="w-100"><a href="#"><h3>よくある質問</h3></a></div><br>
-      <div class="w-100"><a href="./other.html"><h3>その他</h3></a></div>
-    </nav>
-  </div>
-  <div class="container col-12 col-md-9 col-lg-8 ml-lg-1 bd-sidebar">
-    <h2 class="d-lg-none">選挙Go</h2>
-    <br class="d-lg-none">
-    <div class="row">
-      <div class="col">
-        <h2>政党で見る</h2>
-      </div>
+  <div class="row align-items-start">
+    <div class="d-none d-lg-block col-lg-3 sticky-top border-r">
+      <nav class="l-bar">
+        <div class="w-100">
+          <h2>選挙Go</h2>
+        </div><br>
+        <div class="w-100"><a href="./index.html">
+            <h3>TOP</h3>
+          </a></div><br>
+        <div class="w-100"><a href="./list.html">
+            <h3>候補者一覧</h3>
+          </a></div><br>
+        <div class="w-100"><a class="disabled" aria-disabled="true">
+            <h3>政党で見る</h3>
+          </a></div><br>
+        <div class="w-100"><a href="#">
+            <h3>よくある質問</h3>
+          </a></div><br>
+        <div class="w-100"><a href="./other.html">
+            <h3>その他</h3>
+          </a></div>
+      </nav>
     </div>
-    <hr>
-    <a href="./seitou/01.html" class="row">
-      <div class="col-3 col-sm-3 col-lg-3">
-        <img src="./img/seitou/jimin-icon.png" width="100%">
+    <div class="container col-12 col-md-9 col-lg-8 ml-lg-1 bd-sidebar">
+      <h2 class="d-lg-none">選挙Go</h2>
+      <br class="d-lg-none">
+      <div class="row">
+        <div class="col">
+          <h2>政党で見る</h2>
+        </div>
       </div>
-      <div class="col">
-        <h2>日本の明日を切り拓く</h2>
-        <h3>自民党</h3>
-        あなたの一票を自民党に。<br>
-        力強い外交・防衛と強い経済、そして憲法改正を目指します。
-      </div>
-    </a>
-    <hr>
+      <hr>
+      <a href="./seitou/01.html" class="row">
+        <div class="col-3 col-sm-3 col-lg-3">
+          <img src="./img/seitou/jimin-icon.png" width="100%">
+        </div>
+        <div class="col">
+          <h2>日本の明日を切り拓く</h2>
+          <h3>自民党</h3>
+          あなたの一票を自民党に。<br>
+          力強い外交・防衛と強い経済、そして憲法改正を目指します。
+        </div>
+      </a>
+      <hr>
+    </div>
   </div>
-</div>
-<div class="d-lg-none footer"></div>
-<ul class="d-lg-none nav justify-content-center navbar-light bg-light fixed-bottom">
-  <ul class="nav justify-content-center navbar-light bg-light fixed-bottom">
-    <li class="nav-item">
-      <a class="nav-link" href="./index.html">TOP</a>
+  <div class="d-lg-none footer"></div>
+  <ul class="d-lg-none nav justify-content-center navbar-light bg-light fixed-bottom">
+    <ul class="nav justify-content-center navbar-light bg-light fixed-bottom">
+      <li class="nav-item">
+        <a class="nav-link" href="./index.html">TOP</a>
       </li>
       <li class=" nav-item">
         <a class="nav-link" href="./list.html">候補者一覧</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link disabled" href="./seitou.html" aria-disabled="true">政党で見る</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">よくある質問</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="./other.html">その他</a>
-    </li>
-  </ul>
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="./seitou.html" aria-disabled="true">政党で見る</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">よくある質問</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="./other.html">その他</a>
+      </li>
+    </ul>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"></script>
 </body>
 
 </html>
