--- a/seitou/01.html
+++ b/seitou/01.html
@@ -107,7 +107,7 @@
   </div>
   <div class="d-lg-none footer"></div>
 
-  <ul class="d-lg-none nav justify-content-center navbar-light bg-light fixed-bottom">
+  <ul class="d-lg-none nav justify-content-around navbar-light bg-light fixed-bottom flex-nowrap">
     <li class="nav-item">
       <a class="nav-link" href="../index.html">TOP</a>
     </li>
