--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
   </div>
 
   <div class="d-lg-none footer"></div>
-  <ul class="d-lg-none nav justify-content-center navbar-light bg-light fixed-bottom">
+  <ul class="d-lg-none nav justify-content-around navbar-light bg-light fixed-bottom flex-nowrap">
     <li class="nav-item">
       <a class="nav-link disabled" href="#" aria-disabled="true">TOP</a>
     </li>
