--- a/seitou.html
+++ b/seitou.html
@@ -61,35 +61,34 @@
     </div>
   </div>
   <div class="d-lg-none footer"></div>
-  <ul class="d-lg-none nav justify-content-center navbar-light bg-light fixed-bottom">
-    <ul class="nav justify-content-center navbar-light bg-light fixed-bottom">
-      <li class="nav-item">
-        <a class="nav-link" href="./index.html">TOP</a>
-      </li>
-      <li class=" nav-item">
-        <a class="nav-link" href="./list.html">候補者一覧</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="./seitou.html" aria-disabled="true">政党で見る</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">よくある質問</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="./other.html">その他</a>
-      </li>
-    </ul>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"></script>
+  <ul class="d-lg-none nav justify-content-around navbar-light bg-light fixed-bottom flex-nowrap">
+    <li class="nav-item">
+      <a class="nav-link" href="./index.html">TOP</a>
+    </li>
+    <li class=" nav-item">
+      <a class="nav-link" href="./list.html">候補者一覧</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link disabled" href="./seitou.html" aria-disabled="true">政党で見る</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">よくある質問</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="./other.html">その他</a>
+    </li>
+  </ul>
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
